@@ -176,7 +176,7 @@ public class ExtKit extends BaseKit {
             try {
                 ClassLoader loader = Lookup.getDefault().lookup(ClassLoader.class);
                 Class extEditorUIClass = loader.loadClass("org.netbeans.editor.ext.ExtEditorUI"); //NOI18N
-                return (EditorUI) extEditorUIClass.newInstance();
+                return (EditorUI) extEditorUIClass.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 noExtEditorUIClass = true;
             }
@@ -196,12 +196,12 @@ public class ExtKit extends BaseKit {
         actions.add(new CommentAction()); // to make ctrl-shift-T in Netbeans55 profile work
         actions.add(new UncommentAction()); // to make ctrl-shift-D in Netbeans55 profile work
                 
-        return TextAction.augmentList(super.createActions(), actions.toArray(new Action[actions.size()]));
+        return TextAction.augmentList(super.createActions(), actions.toArray(new Action[0]));
     }
     
     /**
      * Action that is localized in org.netbeans.editor package.
-     * <br/>
+     * <br>
      * <code>BaseKit.class</code> is used as a bundle class.
      */
     private abstract static class BaseKitLocalizedAction extends BaseAction {
@@ -1080,7 +1080,7 @@ public class ExtKit extends BaseKit {
         /** 
          * Check the characters that should cause reindenting the line. 
          * 
-         * @deprecated Please use <a href="@org-netbeans-modules-editor-indent@/org/netbeans/modules/editor/indent/spi/support/AutomatedIndenting.html">AutomatedIndentig</a>
+         * @deprecated Please use <a href="@org-netbeans-modules-editor-indent-support@/org/netbeans/modules/editor/indent/spi/support/AutomatedIndenting.html">AutomatedIndentig</a>
          *   or Typing Hooks instead, for details see
          *   <a href="@org-netbeans-modules-editor-lib2@/overview-summary.html">Editor Library 2</a>.
          */
