@@ -50,7 +50,6 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 import javax.swing.BorderFactory;
 import javax.swing.Icon;
-import javax.swing.ImageIcon;
 import javax.swing.JCheckBox;
 import javax.swing.JComboBox;
 import javax.swing.JComponent;
@@ -66,7 +65,6 @@ import org.openide.awt.GraphicsUtils;
 import org.openide.awt.HtmlRenderer;
 import org.openide.nodes.Node.Property;
 import org.openide.util.ImageUtilities;
-import org.openide.util.Utilities;
 import org.openide.util.WeakListeners;
 
 /** 
@@ -283,7 +281,7 @@ final class RendererFactory {
 
                 if (c != null) {
                     try {
-                        result = (PropertyEditor) c.newInstance();
+                        result = (PropertyEditor) c.getDeclaredConstructor().newInstance();
 
                         //Check the values first
                         Object mdlValue = pm.getValue();
@@ -481,13 +479,12 @@ final class RendererFactory {
             f = new JLabel().getFont();
         }
 
-        StringBuffer buf = new StringBuffer(str.length() * 6); // x -> \u1234
-        char[] chars = str.toCharArray();
+        StringBuilder buf = new StringBuilder(str.length() * 6); // x -> \u1234
+        final int length = str.length();
+        for (int offset = 0; offset < length; ) {
+            final int cp = str.codePointAt(offset);
 
-        for (int i = 0; i < chars.length; i++) {
-            char c = chars[i];
-
-            switch (c) {
+            switch (cp) {
             // label doesn't interpret tab correctly
             case '\t':
                 buf.append("        "); // NOI18N
@@ -511,19 +508,22 @@ final class RendererFactory {
 
             default:
 
-                if ((null == f) || f.canDisplay(c)) {
-                    buf.append(c);
+                if ((null == f) || f.canDisplay(cp)) {
+                    buf.appendCodePoint(cp);
                 } else {
-                    buf.append("\\u"); // NOI18N
+                    for (char c : Character.toChars(cp)) {
+                        buf.append("\\u"); // NOI18N
 
-                    String hex = Integer.toHexString(c);
+                        String hex = Integer.toHexString(c);
 
-                    for (int j = 0; j < (4 - hex.length()); j++)
-                        buf.append('0');
+                        for (int j = 0; j < (4 - hex.length()); j++)
+                            buf.append('0');
 
-                    buf.append(hex);
+                        buf.append(hex);
+                    }
                 }
             }
+            offset += Character.charCount(cp);
         }
 
         return buf.toString();
@@ -970,7 +970,7 @@ final class RendererFactory {
             }
 
             if (i != null) {
-                setIcon(new ImageIcon(i));
+                setIcon(ImageUtilities.image2Icon(i));
             }
         }
 
