@@ -68,7 +68,7 @@ import org.openide.util.actions.SystemAction;
 * </p>
 *
 * @author Jan Jancura, Ian Formanek, Jaroslav Tulach
-* @param T the type of bean to be represented
+* @param <T> the type of bean to be represented
 */
 public class BeanNode<T> extends AbstractNode {
     // static ..................................................................................................................
@@ -383,14 +383,9 @@ public class BeanNode<T> extends AbstractNode {
         Object o;
 
         try {
-            o = clazz.newInstance();
-        } catch (InstantiationException e) {
+            o = clazz.getDeclaredConstructor().newInstance();
+        } catch (ReflectiveOperationException e) {
             NodeOp.exception(e);
-
-            return null;
-        } catch (IllegalAccessException e) {
-            NodeOp.exception(e);
-
             return null;
         }
 
